# ntm_needle_biopsy

./: .gitmodules  README.md
background_research/: Performance Analysis of Biopsy Needle Summary Thomas Chang.docx
code/biopsy_needle/: CMakeLists.txt
code/biopsy_needle/docs/: DOXY_README.md  Doxyfile  Doxyfile.bak
code/biopsy_needle/docs/html/: DOXY__README_8md.html  config_8h.html  config_8h__dep__incl.map  config_8h__dep__incl.md5  config_8h_source.html  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  files.html  globals.html  globals_func.html  globals_vars.html  graph_legend.html  group__BatteryMacros.html  group__MotorMacros.html  hw__config_8c.html  hw__config_8c__incl.map  hw__config_8c__incl.md5  index.html  main_8cpp.html  main_8cpp__incl.dot  main_8cpp_a5e74d3c55ba6d356cd90823775f2d664_cgraph.map  main_8cpp_a64461563174d034ff94d443f2c172622_cgraph.md5  main_8cpp_ac59ebf0340587075ef7d1fc943c78408_cgraph.md5  main_8cpp_ac7c42980e08859e81090559d51a512b0_cgraph.map  main_8cpp_ae2e93a7266c27d56845381cb2076d391_cgraph.md5  main_8cpp_ae66f6b31b5ad750f1fe042a706a4e3d4_cgraph.md5  main_8cpp_source.html  md_DOXY__README.html  menudata.js  msc__disk_8c__incl.md5  msc__disk_8c_a148e0153ce23f6ffd6305fb0e0fc4dfd_cgraph.map  msc__disk_8c_a148e0153ce23f6ffd6305fb0e0fc4dfd_cgraph.md5  ntm__helpers_8cpp.html  ntm__helpers_8cpp__incl.dot  ntm__helpers_8cpp__incl.map  ntm__helpers_8cpp__incl.md5  ntm__helpers_8cpp_source.html  ntm__helpers_8h.html  (+15 more)
code/biopsy_needle/docs/html/search/: all_0.js  all_1.js  all_10.js  all_12.js  all_13.js  all_2.js  all_6.js  all_7.js  all_a.js  defines_2.js  defines_6.js  defines_9.js  defines_a.js  defines_c.js  enums_0.js  enumvalues_1.js  files_1.js  files_5.js  files_6.js  functions_0.js  functions_1.js  functions_7.js  functions_9.js  groups_1.js  pages_2.js  pages_3.js  pages_4.js  pages_5.js  searchdata.js  variables_1.js  variables_6.js  variables_8.js
code/biopsy_needle/docs/latex/: DOXY__README_8md.tex  config_8h.tex  config_8h.tex.tmp  config_8h__dep__incl.md5  config_8h_source.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_b0856f6b0d80ccb263b2f415c91f9e17.tex  dir_b0856f6b0d80ccb263b2f415c91f9e17_dep.md5  files.tex  group__BatteryMacros.tex  group__MotorMacros.tex  hw__config_8c.tex  hw__config_8c__incl.dot  hw__config_8c__incl.md5  hw__config_8c_source.tex  index.tex  main_8cpp.tex  main_8cpp.tex.tmp  main_8cpp__incl.dot  main_8cpp__incl.md5  main_8cpp_a5e74d3c55ba6d356cd90823775f2d664_cgraph.md5  main_8cpp_a64461563174d034ff94d443f2c172622_cgraph.md5  main_8cpp_a8c50659733df2acac1580d209db8e97f_cgraph.md5  main_8cpp_ac59ebf0340587075ef7d1fc943c78408_cgraph.md5  main_8cpp_ac7c42980e08859e81090559d51a512b0_cgraph.md5  main_8cpp_ae2e93a7266c27d56845381cb2076d391_cgraph.md5  main_8cpp_ae66f6b31b5ad750f1fe042a706a4e3d4_cgraph.md5  main_8cpp_source.tex  md_DOXY__README.tex  msc__disk_8c.tex  msc__disk_8c__incl.md5  msc__disk_8c_a148e0153ce23f6ffd6305fb0e0fc4dfd_cgraph.md5  msc__disk_8c_a187bf69a8d208e32b862489fe4caa23d_cgraph.md5  msc__disk_8c_a375a5cc4f5760603edf955765eca41a8_cgraph.md5  msc__disk_8c_source.tex  ntm__helpers_8cpp.tex  ntm__helpers_8cpp__incl.md5  ntm__helpers_8cpp_source.tex  ntm__helpers_8h.tex  ntm__helpers_8h__dep__incl.dot  (+16 more)
code/biopsy_needle/libs/FX29/: fx29.c  fx29.h
code/biopsy_needle/libs/SSD1306/: README.md  ssd1306.h
code/biopsy_needle/src/: hw_config.c  main.cpp  msc_disk.c  ntm_helpers.cpp  usb_descriptors.c
code/biopsy_needle/src/include/: config.h  ntm_helpers.h  ntm_needle_helpers.h  pins.h
docs/: config_8h.html  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.dot  dir_b0856f6b0d80ccb263b2f415c91f9e17.html  dir_b0856f6b0d80ccb263b2f415c91f9e17_dep.dot  dir_b0856f6b0d80ccb263b2f415c91f9e17_dep.map  files.html  globals.html  (+45 more)
(+95 files in other folders)
